apps/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-frontend
  namespace: ecom
spec:
  replicas: 2

  selector:
    matchLabels:
      app: ecom-frontend

  template:
    metadata:
      labels:
        app: ecom-frontend

    spec:
      containers:
        - name: frontend
          image: mendax1/e-comfront:82d2e8973d4fa83c4141a93661d1cbc01fd98c36

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
