apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-frontend
  namespace: ecom
spec:
  type: ClusterIP

  selector:
    app: ecom-frontend

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
